# kiba_py_uv

./: .gitignore  Dockerfile  README-MCP SSE.md  README-Milvus.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py
app/routers/: __init__.py  api_test.py  items.py  tests.py
app/routers/mcp/: __init__.py  sse.py  tool_database.py  tool_weather.py
app/routers/test/: api_test.py  items.py
app/tables/items/: crud.py  models.py
mcp/: server.py
mcp_stdio_demo/: mcp_stdio.py
milvus_demo/: create.py  del.py  main.py  milvus_client.py  milvus_main.py
