[project]
name = "kiba-py-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "sqlalchemy",
    "pymysql",
    "httpx>=0.28.1",
    "fastmcp>=2.13.1",
    "pymilvus>=2.6.4",
]
